openshift-services/service-mesh/bookinfo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bookinfo
  labels:
    ossm3-discovery: enabled
    istio-discovery: enabled
    istio.io/rev: main
    ossm2-discovery: enabled
    # istio-injection: enabled
