openshift-services/service-mesh/bookinfo/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: bookinfo
spec:
  to:
    kind: Service
    name: productpage
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
